Revision history for exact

{{$NEXT}}

1.07      2019-08-08 06:44:27-07:00 America/Los_Angeles
        - POD bug fixes

1.06      2019-07-25 15:15:06-07:00 America/Los_Angeles
        - Extensions support
        - Carp methods import
        - TryCatch integration
        - Include support for UTF8
        - Autoclean method for parameter input
        - Update feature sets to include Perl 5.30

1.05      2018-06-21 16:16:55-07:00 America/Los_Angeles
        - Reverse use of strictures in favor of strict/warnings

1.04      2018-06-20 12:31:51-07:00 America/Los_Angeles
        - use strictures 2
        - use namespace::autoclean

1.03      2018-01-04 18:58:07-08:00 America/Los_Angeles
        - Add Perl versions to test; annual general update for 2018
        - Remove testing switch statements (given/when) because v27 drops support

1.02      2017-07-10 13:32:41-04:00 America/New_York
        - Alter dependencies to enable old versions of Perl back to v5.10

1.01      2017-07-07 18:16:59-04:00 America/New_York
        - Deactivate TravisCI testing of 3 old Perl versions temporarily
        - Check for any possible experiments before import (bug fix)

1.00      2017-07-07 17:49:43-04:00 America/New_York
        - First version, released on an unsuspecting world.