@@ -1,6 +1,7 @@
 Revision history for exact
 
 {{$NEXT}}
+        - Replaced TryCatch with Try::Tiny to reduce dependency load
 
 1.07      2019-08-08 06:44:27-07:00 America/Los_Angeles
         - POD bug fixes
